Fix spacing issue on expandedPost

--- a/src/components/Feed/ExpandedPost.css
+++ b/src/components/Feed/ExpandedPost.css
@@ -8,7 +8,6 @@
 }
 .expandedPostWrapper {
     width: 75%;
-    max-height: 90%;
     border-radius: 15px;
 }
 .back {
